--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<!--Normalize -->
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />	
 		<!--Custom Styles -->
-		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link rel="stylesheet" type="text/css" href="css/styles-dist.css" />
 
 
 		<!--[if IE]>
@@ -41,7 +41,7 @@
 							<img src="img/banner_large.jpg">
 					</div>
 					<div class="article-cont">						
-						<h2>Introducción</h2>
+						<h2>Introduccion: artículo uno</h2>
 						<p>Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores.</p>
 						<p> Quo no falli viris intellegam, ut fugit veritus placerat per.
 						Ius id vidit volumus mandamus, vide veritus democritum te nec, ei eos debet libris consulatu. No mei ferri graeco dicunt, ad cum veri accommodare. Sed at malis omnesque delicata, usu et iusto zzril meliore. Dicunt maiorum eloquentiam cum cu, sit summo dolor essent te. Ne quodsi nusquam legendos has, ea dicit voluptua eloquentiam pro, ad sit quas qualisque. Eos vocibus deserunt quaestio ei.
